Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26954

QWindow not showing window decorations on some window managers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.0.0 Beta 1
    • GUI: Window management
    • None
    • 62565321a6aebb58bc41613e38ad8ebaa08f23fe

    Description

      When showing a default constructed QWindow with the XCB plugin the presence of window decorations is not consistent across window managers. For example, on KDE (kwin), the default window will receive decorations, however on Ubuntu Unity (compiz) the window is not decorated by default. This behavior differs from Qt 4.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            jabarron Jason Barron
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes